fix serializer, update validation of csr to use cryptography library for more robust validation
